# edi-phasevocoder

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  readme.md
cmake/: add_plugin.cmake
source/DSP/: OverlapAdd.cpp  OverlapAdd.h  OverlapSave.cpp  OverlapSave.h  Phase.cpp  Phase.h  Resampler.cpp  Resampler.h
source/LadderFilter/: LadderFilterEditor.cpp  LadderFilterEditor.h  LadderFilterProcessor.cpp  LadderFilterProcessor.h
source/Parameter/: BaseProcessor.cpp  BaseProcessor.h  GenericParameterEditor.cpp  GenericParameterEditor.h  ParameterComponents.cpp  ParameterFIFO.cpp  ParameterInfo.cpp  ParameterInfo.h  ParameterManager.cpp  ParameterManager.h
source/PhaseVocoder/: PhaseVocoderEditor.cpp  PhaseVocoderEditor.h  PhaseVocoderProcessor.cpp  PhaseVocoderProcessor.h
